--- a/css/_media.scss
+++ b/css/_media.scss
@@ -238,6 +238,7 @@
     #nav>.container{
         padding: 0 !important;
         --bs-gutter-x: 0 !important;
+        margin-right: 10px;
     }
     .footer-sec2 .ico > span{
         font-size: 10px;
